K8S/kafka-proxy.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: host.docker.internal
subsets:
  - addresses:
    - ip: 192.168.0.102
    ports:
      - port: 9092
