K8S/twittorapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twittorapp-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twittorapp
  template:
    metadata:
      labels:
        app: twittorapp
    spec:
      containers:
      - name: twittorapp
        image: bigegi84/twittorapp:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: twittorapp-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: twittorapp
  ports:
  - name: twittorapp
    protocol: TCP
    port: 80
    targetPort: 80
