K8S/twittorgraphql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twittorgraphql-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twittorgraphql
  template:
    metadata:
      labels:
        app: twittorgraphql
    spec:
      containers:
      - name: twittorgraphql
        image: bigegi84/twittorgraphql:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: twittorgraphql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: twittorgraphql
  ports:
  - name: twittorgraphql
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: twittorgraphql-srv
spec:
  type: NodePort
  selector:
    app: twittorgraphql
  ports:
  - name: twittorgraphql
    protocol: TCP
    port: 80
    targetPort: 80
