K8S/twittorlog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twittor-log-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twittor-log
  template:
    metadata:
      labels:
        app: twittor-log
    spec:
      containers:
      - name: twittor-log
        image: bigegi84/twittor-log:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: twittor-log-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: twittor-log
  ports:
  - name: twittor-log
    protocol: TCP
    port: 80
    targetPort: 80
