K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: devbootcamp.id
    http:
      paths:
      - pathType: Prefix
        path: "/graphql"
        backend:
          service:
            name: twittor-graphql-clusterip-srv
            port: 
              number: 80
